--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-
-  "name": "my-glitch-app",
-  "version": "0.0.1",
+  "name": "freecodecamp-file-upload-api",
+  "version": "1.0.0",
   "description": "What am I about?",
   "main": "server.js",
   "scripts": {
@@ -18,12 +14,13 @@
     "node": "6.10.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/welcome-project"
+    "url": "https://github.com/honmanyau/freecodecamp-file-upload-api"
   },
   "license": "MIT",
   "keywords": [
     "node",
     "glitch",
-    "express"
+    "express",
+    "freecodecamp"
   ]
 }
